# epistemiological-memory-llm

./: .env  .env.example  .gitignore  README.md  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
src/: __init__.py  chat_agent.py  chunk_extractor.py  embeddings.py  memory_agent.py  streamlit.py
src/database/: vectordb.py
