[tool.poetry]
name = "epistemiological-memory-llm"
version = "0.1.0"
description = ""
authors = ["Matheus Lenke <matheuslenke@gmail.com>"]
readme = "README.md"

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.12"
langchain-google-genai = "^2.1.0"
langchain = "^0.3.20"
langchain-community = "^0.3.19"
langchain-chroma = "^0.2.2"
langchain-ollama = "^0.2.3"
langchain-google-vertexai = "^2.0.15"
scikit-learn = "^1.6.1"
langgraph = "^0.3.18"
langsmith = "^0.3.18"
langchain-anthropic = "^0.3.10"
streamlit = "^1.43.2"

[tool.pyright]
venvPath="/Users/matheuslenke/Library/Caches/pypoetry/virtualenvs"
venv="epistemiological-memory-llm-g8KI5k77-py3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
